created stock user questions service

--- a/stock-user-questions/src/main/resources/application.properties
+++ b/stock-user-questions/src/main/resources/application.properties
@@ -1,8 +1,6 @@
-spring.application.name=stock-category
+spring.application.name=stock-user-questions
 spring.data.mongodb.uri=mongodb+srv://root:root@stockcluster.iv4yc.mongodb.net/?retryWrites=true&w=majority&appName=StockCluster
-spring.data.mongodb.database=categoryservice
+spring.data.mongodb.database=userquestionsservice
 eureka.client.serviceUrl.defaultZone=http://localhost:8921/eureka/
-server.port=7063
-
-
+server.port=7064
 
