--- a/stock-gateway/src/main/resources/application.properties
+++ b/stock-gateway/src/main/resources/application.properties
@@ -18,6 +18,10 @@ spring.cloud.gateway.routes[4].id=stock-user-question-answer
 spring.cloud.gateway.routes[4].uri=http://localhost:7065
 spring.cloud.gateway.routes[4].predicates[0]=Path=/answer/**
 
-#spring.cloud.gateway.routes[0].filters[0]=AuthenticationFilter
-#spring.cloud.gateway.routes[1].filters[0]=AuthenticationFilter
+spring.cloud.gateway.routes[0].filters[0]=AuthenticationFilter
+spring.cloud.gateway.routes[1].filters[0]=AuthenticationFilter
+spring.cloud.gateway.routes[2].filters[0]=AuthenticationFilter
+spring.cloud.gateway.routes[3].filters[0]=AuthenticationFilter
+spring.cloud.gateway.routes[4].filters[0]=AuthenticationFilter
+
 spring.main.web-application-type=reactive
