--- a/stock-gateway/src/main/resources/application.properties
+++ b/stock-gateway/src/main/resources/application.properties
@@ -1,27 +1,48 @@
 spring.application.name=stock-gateway
 eureka.client.serviceUrl.defaultZone=http://localhost:8921/eureka/
 server.port=7060
+
+# Enable service discovery for dynamic routing
 spring.cloud.gateway.discovery.locator.enabled=true
+
+# Static routes configuration
 spring.cloud.gateway.routes[0].id=stock-userdetails
 spring.cloud.gateway.routes[0].uri=http://localhost:7061
 spring.cloud.gateway.routes[0].predicates[0]=Path=/usercredentials/**
+
 spring.cloud.gateway.routes[1].id=stock-watchlist
 spring.cloud.gateway.routes[1].uri=http://localhost:7062
 spring.cloud.gateway.routes[1].predicates[0]=Path=/watchlist/**
+
 spring.cloud.gateway.routes[2].id=stock-category
 spring.cloud.gateway.routes[2].uri=http://localhost:7063
 spring.cloud.gateway.routes[2].predicates[0]=Path=/category/**
+
 spring.cloud.gateway.routes[3].id=stock-user-questions
 spring.cloud.gateway.routes[3].uri=http://localhost:7064
 spring.cloud.gateway.routes[3].predicates[0]=Path=/questions/**
+
 spring.cloud.gateway.routes[4].id=stock-user-question-answer
 spring.cloud.gateway.routes[4].uri=http://localhost:7065
 spring.cloud.gateway.routes[4].predicates[0]=Path=/answer/**
 
+spring.cloud.gateway.routes[5].id=stock-notification
+spring.cloud.gateway.routes[5].uri=http://localhost:7066
+spring.cloud.gateway.routes[5].predicates[0]=Path=/notification/**
+
+# Add custom authentication filter to all routes
 spring.cloud.gateway.routes[0].filters[0]=AuthenticationFilter
 spring.cloud.gateway.routes[1].filters[0]=AuthenticationFilter
 spring.cloud.gateway.routes[2].filters[0]=AuthenticationFilter
 spring.cloud.gateway.routes[3].filters[0]=AuthenticationFilter
 spring.cloud.gateway.routes[4].filters[0]=AuthenticationFilter
+spring.cloud.gateway.routes[5].filters[0]=AuthenticationFilter
 
+# Reactive web application type
 spring.main.web-application-type=reactive
+
+# Global CORS Configuration
+#spring.cloud.gateway.globalcors.corsConfigurations.[/**].allowedOrigins="*"
+#spring.cloud.gateway.globalcors.corsConfigurations.[/**].allowedMethods=GET,POST,PUT,DELETE,OPTIONS,PATCH
+#spring.cloud.gateway.globalcors.corsConfigurations.[/**].allowedHeaders="*"
+#spring.cloud.gateway.globalcors.corsConfigurations.[/**].allowCredentials=true
